--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,19 +1,14 @@
 ---
-import '/public/styles/style.css'
+import "/public/styles/style.css";
 ---
-<style>
-    div{
-        display: inline-block;
-    }
-</style>
 
-
-<div>
-  <p>
-    Hey there! I am Ashika from India. There isn't an extraordinary person
-    sitting behind this. I am a woman in my mid 20s trying to create a journal
-    which I can possibly look at in my 50s or 60s or which can make someone feel
-    like oh! there is someone like me out there. You can call this a journal or
-    a portfolio or just a notebook. Feel free to connect me through ashikahussain111@gmail.com.
+<div class="about">
+  <p class="about-description">
+    Hi there! I'm Ashika, hailing from India. My passion lies in crafting web
+    apps. Here, I'll be sharing my learning journey, sprinkled with a touch of
+    poetry and some life lessons I gather along the way. I hope to capture the
+    essence of my beautifully imperfect life through words. Feel free to reach
+    out to me anytime at ashikahussain111@gmail.com if you'd like to connect.
+    Looking forward to engaging in some meaningful conversations!
   </p>
 </div>
