--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import About from '../components/about.astro';
+import Card from '../components/Card.astro';
+import Contact from '../components/Contact.astro';
 
 ---
 <Layout>
   <About></About>
+  <Card></Card>
+  <Contact></Contact>
 </Layout>
